--- a/config/config.json
+++ b/config/config.json
@@ -13,6 +13,8 @@
   },
   "externals": {},
   "localizedResources": {
-    "ListChartWebPartStrings": "lib/webparts/listChart/loc/{locale}.js"
+    "ListChartWebPartStrings": "lib/webparts/listChart/loc/{locale}.js",
+    "ControlStrings": "node_modules/@pnp/spfx-controls-react/lib/loc/{locale}.js",
+    "PropertyControlStrings": "node_modules/@pnp/spfx-property-controls/lib/loc/{locale}.js"
   }
 }
