Added services to webpart and retrieved sharepoint sites

--- a/src/webparts/listCharts/ListChartsWebPart.manifest.json
+++ b/src/webparts/listCharts/ListChartsWebPart.manifest.json
@@ -20,7 +20,9 @@
     "description": { "default": "List Charts description" },
     "officeFabricIconFontName": "Page",
     "properties": {
-      "description": "List Charts"
+      "description": "List Charts",
+      "numCharts": 1,
+      "maxResults": 5000
     }
   }]
 }
